--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,22 @@
-/* Reset básico para márgenes y rellenos */
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/* Estilo general del cuerpo */
+
 body {
+    height: 100%;
     font-family: Arial, sans-serif;
     line-height: 1.6;
     color: #333;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
-/* Estilo de la cabecera */
+
 header {
     background-color: #333;
     color: #fff;
@@ -41,8 +45,9 @@ nav a:hover {
     background-color: #777;
 }
 
-/* Estilo de la sección principal */
+
 main {
+    flex: 1; 
     padding: 20px;
 }
 
@@ -88,13 +93,12 @@ main {
     background-color: #555;
 }
 
-/* Estilo del pie de página */
+
 footer {
     background-color: #333;
     color: #fff;
     padding: 10px;
     text-align: center;
-    position: absolute;
     width: 100%;
-    bottom: 0;
+    margin-top: auto;
 }
