--- a/css/styles.css
+++ b/css/styles.css
@@ -187,3 +187,19 @@ footer {
     width: 100%;
     margin-top: auto;
 }
+
+
+
+@media (max-width: 700px) {
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+    }
+
+    .product {
+        width: calc(50% - 10px); 
+        box-sizing: border-box;  
+    }
+
+}
